@@ -1,3 +1,8 @@
+2021-12-20  Andreas Scherer  <https://ascherer.github.io>
+
+	* comm-w2c.h,
+	* ctwill-mini.ch: Reshuffle 'gettext' header.
+
 2021-12-05  Andreas Scherer  <https://ascherer.github.io>
 
 	* comm-w2c.ch,
